force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__ReminderDelay__c.field-meta.xml
<CustomField>
    <fullName>dsfs__ReminderDelay__c</fullName>
    <label>Reminder Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>