force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__SCS__c.field-meta.xml
<CustomField>
    <fullName>dsfs__SCS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Chatter Settings</label>
    <type>Checkbox</type>
</CustomField>