force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__SSB__c.field-meta.xml
<CustomField>
    <fullName>dsfs__SSB__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Send Button</label>
    <type>Checkbox</type>
</CustomField>