force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/fields/dsfs__STB__c.field-meta.xml
<CustomField>
    <fullName>dsfs__STB__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Tag Button</label>
    <type>Checkbox</type>
</CustomField>