force-app/main/default/objects/dsfs__EnvelopeConfiguration__c/listViews/dsfs__All1.listView-meta.xml
<ListView>
    <fullName>dsfs__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>